--- a/sass/team.scss
+++ b/sass/team.scss
@@ -13,8 +13,7 @@
 
 .team__container {
   width: $panel-width;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 35px 20px 30px;
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
@@ -22,7 +21,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 1170px;
+    width: $desktop-width;
+    padding: 0;
   }
 }
 
@@ -34,6 +34,11 @@
   text-transform: uppercase;
   color: $darktext-color;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 45px;
+  }
 
   @media (min-width: $desktop-width) {
     font-size: 48px;
@@ -59,13 +64,19 @@
     background-color: rgba(0, 0, 0, 0.6);
   }
 
-  @media (min-width: $desktop-width) {
-    max-width: 392px;
+  @media (min-width: $tablet-width) {
+    max-width: 364px;
     padding-top: 30px;
-    padding-left: 65px;
-    padding-right: 65px;
+    padding-left: 51px;
+    padding-right: 51px;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 392px;
+    padding-left: 65px;
+    padding-right: 65px;
   }
 }
 
@@ -104,6 +115,10 @@
     opacity: 0.5;
   }
 
+  @media (min-width: $tablet-width) {
+    top: 48%;
+  }
+
   @media (min-width: $desktop-width) {
     top: 47.5%
   }
@@ -138,11 +153,15 @@
   top: 0;
   left: 0;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     width: 262px;
     height: 262px;
     padding: 20px;
     top: 30px;
+    left: 51px;
+  }
+
+  @media (min-width: $desktop-width) {
     left: 65px;
   }
 }
