--- a/sass/header.scss
+++ b/sass/header.scss
@@ -70,6 +70,7 @@
   background-position: center;
   background-size: contain;
   outline: none;
+  cursor: pointer;
 
   &--cross {
     background-image: url('../images/menu-cross.svg');
@@ -108,6 +109,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    display: block;
     margin-top: 133px;
     margin-bottom: 50px;
     font-size: 72px;
@@ -138,6 +140,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    display: block;
     width: 960px;
     min-height: 202px;
     font-size: 30px;
