--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   min-height: 70px;
-  background-color: $dark-color;
+  background-color: #000000;
 
   @media (min-width: $desktop-width) {
     min-height: 30px;
