--- a/sass/ideas.scss
+++ b/sass/ideas.scss
@@ -182,13 +182,13 @@
 .ideas__btn--prev {
   left: 40px;
   top: 29%;
-  background-image: url('../images/left-arrow-red.svg');
+  background-image: url('../images/left-arrow-white.svg');
 }
 
 .ideas__btn--next {
   right: 40px;
   top: 29%;
-  background-image: url('../images/right-arrow-red.svg');
+  background-image: url('../images/right-arrow-white.svg');
 }
 
 .ideas__link {
