--- a/sass/header.scss
+++ b/sass/header.scss
@@ -33,6 +33,8 @@
 .header__panel {
   width: $panel-width;
   height: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   justify-content: space-between;
 
@@ -43,8 +45,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 300px;
+    width: 350px;
     height: 65px;
+    padding: 0 0 0 5px;
     align-items: flex-end;
   }
 }
@@ -52,11 +55,13 @@
 .header__logo {
   width: 145px;
   height: 30px;
-  border: 3px solid $light-color;
+  background-image: url('../images/logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 
   @media (min-width: $desktop-width) {
-    width: 263px;
-    height: 58px;
+    width: 265px;
+    height: 60px;
   }
 }
 
