--- a/sass/form.scss
+++ b/sass/form.scss
@@ -80,6 +80,7 @@
   color: $light-color;
   background-color: transparent;
   border: 1px solid $light-color;
+  font-family: inherit;
   font-size: 12px;
   line-height: 18px;
   outline: none;
