--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,11 +1,15 @@
 .header {
   padding-top: 12px;
   width: 100%;
-  min-height: 280px;
+  min-height: 490px;
   background-image: url('../images/bg_header.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left bottom;
+
+  @media (min-width: $tablet-width) {
+    min-height: 510px;
+  }
 
   @media (min-width: $desktop-width) {
     min-height: 800px;
@@ -54,10 +58,14 @@
 
 .header__logo {
   width: 145px;
-  height: 30px;
+  height: 40px;
   background-image: url('../images/logo.png');
   background-repeat: no-repeat;
   background-size: contain;
+
+  @media (min-width: $tablet-width) {
+    height: 50px;
+  }
 
   @media (min-width: $desktop-width) {
     width: 265px;
@@ -94,7 +102,7 @@
 }
 
 .header__title {
-  margin-top: 28px;
+  margin-top: 40px;
   margin-bottom: 0;
   font-family: $title-font;
   font-size: 24px;
@@ -105,12 +113,17 @@
   text-align: center;
 
   &--hidden {
-    display: none;
+    margin-top: 0;
+    font-size: 0;
   }
 
   @media (min-width: $tablet-width) {
     font-size: 48px;
     line-height: 48px;
+
+    &--hidden {
+      font-size: 0;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -135,13 +148,17 @@
   text-align: center;
 
   &--hidden {
-    display: none;
+    font-size: 0;
   }
 
   @media (min-width: $tablet-width) {
     width: 600px;
     font-size: 18px;
     line-height: 24px;
+
+    &--hidden {
+      font-size: 0;
+    }
   }
 
   @media (min-width: $desktop-width) {
