--- a/sass/header.scss
+++ b/sass/header.scss
@@ -96,6 +96,7 @@
 
 .header__menu {
   @media (min-width: $desktop-width) {
+    display: flex;
     margin-left: auto;
     align-self: flex-end;
   }
@@ -113,17 +114,12 @@
   text-align: center;
 
   &--hidden {
-    margin-top: 0;
-    font-size: 0;
+    display: none;
   }
 
   @media (min-width: $tablet-width) {
     font-size: 48px;
     line-height: 48px;
-
-    &--hidden {
-      font-size: 0;
-    }
   }
 
   @media (min-width: $desktop-width) {
@@ -148,17 +144,13 @@
   text-align: center;
 
   &--hidden {
-    font-size: 0;
+    display: none;
   }
 
   @media (min-width: $tablet-width) {
     width: 600px;
     font-size: 18px;
     line-height: 24px;
-
-    &--hidden {
-      font-size: 0;
-    }
   }
 
   @media (min-width: $desktop-width) {
