--- a/css/style.css
+++ b/css/style.css
@@ -925,7 +925,7 @@ ul {
 
 .swiper-container--1 {
   width: 320px;
-  height: 100px;
+  min-height: 100px;
   padding-left: 20px;
   padding-right: 20px;
   display: -webkit-box;
