--- a/sass/partner.scss
+++ b/sass/partner.scss
@@ -33,7 +33,7 @@
 
 .swiper-container--1 {
   width: $panel-width;
-  height: 100px;
+  min-height: 100px;
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
